# ConsolidateXcel

./: .gitignore  README.md  pyproject.toml
app/: config.json  main.py
app/pipeline/: __init__.py  extract.py  load.py  transform.py
data/output/: consolidated_output.xlsx  output.xlsx
tests/: test_pipeline.py  unit_tests.py
