[tool.poetry]
name = "data-quality-workshop"
version = "0.1.0"
description = "ETL project"
authors = ["Raquel Reis <raquelreis233@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.7"
pandas = "^2.2.2"
openpyxl = "^3.1.2"
pytest = "^8.2.1"
blue = "^0.9.1"
isort = "^5.13.2"
pip-audit = "^2.7.3"
taskipy = "^1.12.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
known_third_party = []

[tool.taskipy.tasks]

format = "isort . && blue ."