[tool.poetry]
name = "ConsolidateXcel"
version = "0.1.0"
description = "ConsolidateXcel is a basic ETL project that automates the extraction, consolidation, and loading of multiple Excel files into a single dataset, simplifying data handling and reporting."
authors = ["Raquel Reis <raquelreis233@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.7"
pandas = "^2.2.2"
openpyxl = "^3.1.2"
pytest = "^8.2.1"
blue = "^0.9.1"
isort = "^5.13.2"
pip-audit = "^2.7.3"
taskipy = "^1.12.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
known_third_party = []

[tool.taskipy.tasks]

format = "isort . && blue ."
kill = "kill -9 $(lsof -t -i :8000)"
test = "cd tests && pytest unit_tests.py -v"
run = """
python3 app/main.py
"""